# pulseaudio-nokia

./: .gitignore  bootstrap.sh  configure.ac  shave-libtool.in
debian/: changelog  control  copyright  pulseaudio-module-nokia-common-dev.install  pulseaudio-module-nokia-common.dirs  pulseaudio-module-nokia-common.install  pulseaudio-module-nokia-drc.install  pulseaudio-module-nokia-eap.install  pulseaudio-module-nokia-music.install  pulseaudio-module-nokia-record.install  pulseaudio-module-nokia-voice.install  pulseaudio-module-nokia-xprot.install  rules
debian/overrides/: pulseaudio-module-meego-music  pulseaudio-module-meego-record  pulseaudio-module-meego-voice
src/: Makefile.am  Makefile.in  pulseaudio-module-meego-cmtspeech.install  pulseaudio-module-meego-cmtspeech.modprobe  pulseaudio-module-meego-cmtspeech.udev  pulseaudio-module-meego-mainvolume.install  pulseaudio-module-meego-music.install  pulseaudio-module-meego-record.install  pulseaudio-module-meego-test.install  pulseaudio-module-meego-voice.install
src/cmtspeech/: Makefile.am  cmtspeech-connection.c  cmtspeech-connection.h  cmtspeech-dbus.c  cmtspeech-dbus.h  cmtspeech-mainloop-handler.c  cmtspeech-mainloop-handler.h  cmtspeech-sink-input.c  cmtspeech-sink-input.h  cmtspeech-source-output.c  cmtspeech-source-output.h  module-nokia-cmtspeech-symdef.h  module-nokia-cmtspeech.c  module-nokia-cmtspeech.h
src/common/: Makefile-rvct  Makefile.am  Makefile.in  memory.c  memory.h  optimized.c  optimized.h  proplist-file.c  proplist-file.h  proplist-nokia.h  src-48-to-8.c  src-48-to-8.h  src-8-to-48.c  src-8-to-48.h
src/common/data/: bta2dp.parameters  btmono-hfp.parameters  btmono-hsp.parameters  fmtx.parameters  hp.parameters  hs.parameters  ihfandfmtx.parameters  ihfandheadset.parameters  ihfandlineout.parameters  ihfandtv-out.parameters  lineout.parameters  tvout.parameters
src/drc/: Makefile.am  drc-module.c  drc.c  drc.h  module-nokia-algorithm-drc-structs.h  module-nokia-algorithm-drc.h  notes.txt
src/eap/: Makefile.am  eap_amplitude_to_gain_int32.c  eap_amplitude_to_gain_int32.h  eap_att_rel_filter_int32.c  eap_att_rel_filter_int32.h  eap_average_amplitude_int32.c  eap_average_amplitude_int32.h  eap_clip.h  eap_data_types.h  eap_limiter_int32.c  eap_limiter_int32.h  eap_long_multiplications.h  eap_mdrc_constants.h  eap_mdrc_delays_and_gains_int32.c  eap_mdrc_delays_and_gains_int32.h  eap_mdrc_internal_events.h  eap_memory.c  eap_memory.h  eap_multiband_drc_control.c  eap_multiband_drc_control.h  eap_multiband_drc_control_int32.c  eap_multiband_drc_control_int32.h  eap_multiband_drc_int32.c  eap_multiband_drc_int32.h  eap_normalize.h  eap_qmf_stereo_int32.c  eap_qmf_stereo_int32.h  eap_warped_delay_line_int32.h  eap_wfir_dummy_int32.c  eap_wfir_dummy_int32.h  eap_wfir_five_bands_int32.c  eap_wfir_five_bands_int32.h  eap_wfir_four_bands_int32.c  eap_wfir_four_bands_int32.h  eap_wfir_int32.h  eap_wfir_three_bands_int32.c  eap_wfir_three_bands_int32.h  eap_wfir_two_bands_int32.c  eap_wfir_two_bands_int32.h
src/eq/: Makefile.am  equ.c  equ.h  iir.c
src/music/: Makefile.am  module-nokia-music-symdef.h  module-nokia-music.c
src/record/: Makefile.am  module-nokia-record-symdef.h  module-nokia-record.c
src/test/: test_eap.cpp  test_eap.pro  xprot.pro  xprot_test.cpp
src/voice/: Makefile.am  eq_fir.c  eq_fir.h  eq_iir.c  eq_iir.h  module-nokia-voice-symdef.h  module-nokia-voice.c  module-voice-api.h  module-voice-userdata.h  status.txt  voice-aep-ear-ref.h  voice-aep-sink-input.c  voice-aep-sink-input.h  voice-buffer.h  voice-cmtspeech.c  voice-cmtspeech.h  voice-convert.h  voice-cs-call-sink-input.c  voice-cs-call-sink-input.h  voice-event-forwarder.c  voice-event-forwarder.h  voice-hw-sink-input.c  voice-hw-sink-input.h  voice-hw-source-output.c  voice-hw-source-output.h  voice-mainloop-handler.c  voice-mainloop-handler.h  voice-optimized.c  voice-optimized.h  voice-raw-sink.c  voice-raw-sink.h  voice-raw-source.c  voice-raw-source.h  voice-sidetone.c  voice-sidetone.h  voice-temperature.c  voice-temperature.h  voice-util.c  voice-util.h  voice-voip-sink.c  (+3 more)
src/xprot/: Makefile.am  a_xprot.c  a_xprot_neon.h  dsp.h  temperature.c  xprot.c  xprot.h
